log
Thu 04 May 2023 11:05:22 PM UTC: 
 tests:  0|5
total_score: 0/70
177eaac
Thu 04 May 2023 11:12:15 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:60:23: error: iteration 8 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   60 |       new->sudo[i][j] = num;
      |       ~~~~~~~~~~~~~~~~^~~~~
sudoku.c:58:24: note: within this loop
   58 |     for (int j = 1 ; j < 10 ; j++){
      |                      ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
37b9316
Thu 04 May 2023 11:12:49 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a9708e6
